fix: 가계부 조회 시 entity 반환하도록 수정