@@ -1,39 +1,40 @@
 package com.example.demo.application;
 
-import com.example.demo.application.dto.CategoryAmountDto;
 import com.example.demo.application.dto.LedgerStatisticsResponse;
+import com.example.demo.domain.LedgerEntry;
 import com.example.demo.domain.LedgerEntryRepository;
+import com.example.demo.domain.User;
+import com.example.demo.domain.UserRepository;
 import com.example.demo.domain.enums.LedgerCategory;
 import com.example.demo.domain.enums.LedgerType;
+import com.example.demo.domain.enums.PaymentMethod;
+import com.example.demo.util.AbstractIntegrationTest;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import static com.example.demo.util.DbUtils.givenSavedUser;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
 
-@ExtendWith(MockitoExtension.class)
-class LedgerStatisticsServiceTest {
+class LedgerStatisticsServiceTest extends AbstractIntegrationTest {
 
-    @Mock
+    @MockitoBean
     private Clock clock;
 
-    @Mock
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
     private LedgerEntryRepository ledgerEntryRepository;
 
-    @InjectMocks
+    @Autowired
     private LedgerStatisticsService ledgerStatisticsService;
 
     private static final Long USER_ID = 1L;
@@ -49,81 +50,59 @@ class LedgerStatisticsServiceTest {
         given(clock.getZone()).willReturn(fixedClock.getZone());
     }
 
-    void 정삭적으로_지출_통계_조회() {
+    @Test
+    void 정상적으로_지출_통계_조회() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        // 이번 달 카테고리별 금액
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.FOOD, 350000L),
-            new CategoryAmountDto(LedgerCategory.TRANSPORT, 120000L),
-            new CategoryAmountDto(LedgerCategory.SHOPPING, 85000L)
-        );
+        // 이번 달(2024-02) 항목들
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 350000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.TRANSPORT, 120000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.SHOPPING, 85000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
-        // Repository Mock 설정
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2024, 2, 1)),  // 이번 달 시작
-            eq(LocalDate.of(2024, 2, 29))  // 이번 달 끝
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2024, 1, 1)),  // 지난 달 시작
-            eq(LocalDate.of(2024, 1, 31))  // 지난 달 끝
-        )).willReturn(580000L);
+        // 지난 달(2024-01) 항목들
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 300000L, LocalDate.of(2024, 1, 10), user),
+            ledgerEntry(type, LedgerCategory.TRANSPORT, 200000L, LocalDate.of(2024, 1, 12), user),
+            ledgerEntry(type, LedgerCategory.SHOPPING, 80000L, LocalDate.of(2024, 1, 20), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.type()).isEqualTo(LedgerType.EXPENSE);
         assertThat(response.categoryAmounts()).hasSize(3);
         assertThat(response.categoryAmounts())
-            .containsEntry("FOOD", 350000L)
-            .containsEntry("TRANSPORT", 120000L)
-            .containsEntry("SHOPPING", 85000L);
+            .containsEntry(LedgerCategory.FOOD, 350000L)
+            .containsEntry(LedgerCategory.TRANSPORT, 120000L)
+            .containsEntry(LedgerCategory.SHOPPING, 85000L);
         assertThat(response.currentMonthTotalAmount()).isEqualTo(555000L);
         assertThat(response.lastMonthTotalAmount()).isEqualTo(580000L);
-
-        // Repository 호출 검증
-        verify(ledgerEntryRepository).findCategoryAmountsByUserAndTypeAndPeriod(
-            USER_ID, type,
-            LocalDate.of(2024, 2, 1),
-            LocalDate.of(2024, 2, 29)
-        );
-        verify(ledgerEntryRepository).findTotalAmountByUserAndTypeAndPeriod(
-            USER_ID, type,
-            LocalDate.of(2024, 1, 1),
-            LocalDate.of(2024, 1, 31)
-        );
     }
 
     @Test
     void 정상적으로_수입_통계_조회() {
         // given
         LedgerType type = LedgerType.INCOME;
+        User user = givenSavedUser(userRepository);
 
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.SALARY, 3000000L),
-            new CategoryAmountDto(LedgerCategory.SIDE_INCOME, 500000L),
-            new CategoryAmountDto(LedgerCategory.BONUS, 1000000L)
-        );
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.SALARY, 3000000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.SIDE_INCOME, 500000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.BONUS, 1000000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(3500000L);
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.SALARY, 3000000L, LocalDate.of(2024, 1, 5), user),
+            ledgerEntry(type, LedgerCategory.SIDE_INCOME, 500000L, LocalDate.of(2024, 1, 18), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.type()).isEqualTo(LedgerType.INCOME);
@@ -133,21 +112,19 @@ class LedgerStatisticsServiceTest {
     }
 
     @Test
-    void 이번달_데이터가_없을때_총액은_0() {
+    void 이번달_데이터가_없을때_카테고리_맵은_비고_총액은_0() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(Collections.emptyList());
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(580000L);
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 300000L, LocalDate.of(2024, 1, 10), user),
+            ledgerEntry(type, LedgerCategory.TRANSPORT, 200000L, LocalDate.of(2024, 1, 12), user),
+            ledgerEntry(type, LedgerCategory.SHOPPING, 80000L, LocalDate.of(2024, 1, 20), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.categoryAmounts()).isEmpty();
@@ -156,246 +133,108 @@ class LedgerStatisticsServiceTest {
     }
 
     @Test
-    void 지난달_데이터가_없는경우_총액은_0() {
+    void 여러_카테고리의_금액을_정확히_합산() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.FOOD, 200000L)
-        );
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(null);  // null 반환
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 100000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.TRANSPORT, 50000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.SHOPPING, 30000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.HEALTH_MEDICAL, 20000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.currentMonthTotalAmount()).isEqualTo(200000L);
-        assertThat(response.lastMonthTotalAmount()).isEqualTo(0L);  // null이 0으로 변환
     }
 
     @Test
-    void 이번달과_지난달_데이터가_없는_경우() {
+    void 같은_카테고리가_여러번_등장하면_합산된다() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(Collections.emptyList());
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
-
-        // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
-
-        // then
-        assertThat(response.categoryAmounts()).isEmpty();
-        assertThat(response.currentMonthTotalAmount()).isEqualTo(0L);
-        assertThat(response.lastMonthTotalAmount()).isEqualTo(0L);
-    }
-
-
-    @Test
-    void 올해_1월의_지난달은_작년_12월() {
-        // given
-        Clock januaryClock = Clock.fixed(
-            Instant.parse("2024-01-15T00:00:00Z"),
-            ZONE_ID
-        );
-        given(clock.instant()).willReturn(januaryClock.instant());
-        given(clock.getZone()).willReturn(januaryClock.getZone());
-
-        LedgerType type = LedgerType.EXPENSE;
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2024, 1, 1)),   // 이번 달: 2024년 1월
-            eq(LocalDate.of(2024, 1, 31))
-        )).willReturn(Collections.emptyList());
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2023, 12, 1)),  // 지난 달: 2023년 12월
-            eq(LocalDate.of(2023, 12, 31))
-        )).willReturn(500000L);
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 10000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.FOOD, 25000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.FOOD, 5000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
-        verify(ledgerEntryRepository).findTotalAmountByUserAndTypeAndPeriod(
-            USER_ID, type,
-            LocalDate.of(2023, 12, 1),
-            LocalDate.of(2023, 12, 31)
-        );
-    }
-
-    @Test
-    void 윤년_2월의_마지막날은_29일() {
-        // given
-        Clock februaryClock = Clock.fixed(
-            Instant.parse("2024-02-15T00:00:00Z"),  // 2024는 윤년
-            ZONE_ID
-        );
-        given(clock.instant()).willReturn(februaryClock.instant());
-        given(clock.getZone()).willReturn(februaryClock.getZone());
-
-        LedgerType type = LedgerType.EXPENSE;
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2024, 2, 1)),
-            eq(LocalDate.of(2024, 2, 29))   // 윤년은 29일까지
-        )).willReturn(Collections.emptyList());
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
-
-        // when
-        ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
-
-        // then
-        verify(ledgerEntryRepository).findCategoryAmountsByUserAndTypeAndPeriod(
-            USER_ID, type,
-            LocalDate.of(2024, 2, 1),
-            LocalDate.of(2024, 2, 29)
-        );
-    }
-
-    @Test
-    void 평년_2월의_마지막날은_28일() {
-        // given
-        Clock februaryClock = Clock.fixed(
-            Instant.parse("2023-02-15T00:00:00Z"),  // 2023은 평년
-            ZONE_ID
-        );
-        given(clock.instant()).willReturn(februaryClock.instant());
-        given(clock.getZone()).willReturn(februaryClock.getZone());
-
-        LedgerType type = LedgerType.EXPENSE;
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            eq(USER_ID),
-            eq(type),
-            eq(LocalDate.of(2023, 2, 1)),
-            eq(LocalDate.of(2023, 2, 28))   // 평년은 28일까지
-        )).willReturn(Collections.emptyList());
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
-
-        // when
-        ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
-
-        // then
-        verify(ledgerEntryRepository).findCategoryAmountsByUserAndTypeAndPeriod(
-            USER_ID, type,
-            LocalDate.of(2023, 2, 1),
-            LocalDate.of(2023, 2, 28)
-        );
-    }
-
-    @Test
-    void 여러_카테고리의_금앨을_정확히_합산() {
-        // given
-        LedgerType type = LedgerType.EXPENSE;
-
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.FOOD, 100000L),
-            new CategoryAmountDto(LedgerCategory.TRANSPORT, 50000L),
-            new CategoryAmountDto(LedgerCategory.SHOPPING, 30000L),
-            new CategoryAmountDto(LedgerCategory.HEALTH_MEDICAL, 20000L)
-        );
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
-
-        // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
-
-        // then
-        assertThat(response.currentMonthTotalAmount()).isEqualTo(200000L);
+        assertThat(response.categoryAmounts()).containsEntry(LedgerCategory.FOOD, 40000L);
+        assertThat(response.currentMonthTotalAmount()).isEqualTo(40000L);
     }
 
     @Test
     void 카테고리가_하나인_경우에도_정상_계산() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.FOOD, 500000L)
-        );
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 500000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.currentMonthTotalAmount()).isEqualTo(500000L);
         assertThat(response.categoryAmounts()).hasSize(1);
+        assertThat(response.categoryAmounts()).containsEntry(LedgerCategory.FOOD, 500000L);
     }
-
 
     @Test
     void 모든_카테고리를_빠짐없이_변환() {
         // given
         LedgerType type = LedgerType.EXPENSE;
+        User user = givenSavedUser(userRepository);
 
-        List<CategoryAmountDto> categoryAmounts = List.of(
-            new CategoryAmountDto(LedgerCategory.FOOD, 10000L),
-            new CategoryAmountDto(LedgerCategory.TRANSPORT, 20000L),
-            new CategoryAmountDto(LedgerCategory.SHOPPING, 30000L),
-            new CategoryAmountDto(LedgerCategory.HEALTH_MEDICAL, 40000L),
-            new CategoryAmountDto(LedgerCategory.LEISURE_HOBBY, 50000L)
-        );
-
-        given(ledgerEntryRepository.findCategoryAmountsByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(categoryAmounts);
-
-        given(ledgerEntryRepository.findTotalAmountByUserAndTypeAndPeriod(
-            any(), any(), any(), any()
-        )).willReturn(0L);
+        saveAllLedgerEntry(List.of(
+            ledgerEntry(type, LedgerCategory.FOOD, 10000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.TRANSPORT, 20000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.SHOPPING, 30000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.HEALTH_MEDICAL, 40000L, LocalDate.of(2024, 2, 15), user),
+            ledgerEntry(type, LedgerCategory.LEISURE_HOBBY, 50000L, LocalDate.of(2024, 2, 15), user)
+        ));
 
         // when
-        LedgerStatisticsResponse response = ledgerStatisticsService
-            .getMonthlyStatistics(USER_ID, type);
+        LedgerStatisticsResponse response = ledgerStatisticsService.getMonthlyStatistics(USER_ID, type);
 
         // then
         assertThat(response.categoryAmounts()).hasSize(5);
         assertThat(response.categoryAmounts()).containsKeys(
-            "FOOD", "TRANSPORT", "SHOPPING", "HEALTH_MEDICAL", "LEISURE_HOBBY"
+            LedgerCategory.FOOD,
+            LedgerCategory.TRANSPORT,
+            LedgerCategory.SHOPPING,
+            LedgerCategory.HEALTH_MEDICAL,
+            LedgerCategory.LEISURE_HOBBY
         );
     }
 
+    private void saveAllLedgerEntry(List<LedgerEntry> ledgerEntries) {
+        for (LedgerEntry ledgerEntry : ledgerEntries) {
+            ledgerEntryRepository.save(ledgerEntry);
+        }
+    }
+
+    private LedgerEntry ledgerEntry(LedgerType type, LedgerCategory category, long amount, LocalDate occurredOn, User user) {
+        return new LedgerEntry(
+            amount,
+            type,
+            category,
+            "desc",
+            occurredOn,
+            PaymentMethod.CREDIT_CARD,
+            "memo",
+            user
+        );
+    }
 }
